MET-4000 Try to repair tests for mcs-rest